Week 1 - SOLID Principles/solid/src/main/java/org/example/OCP/good/XMLEncoder.java
package org.example.OCP.good;

public class XMLEncoder implements DataEncoder {
    @Override
    public String encode(String data) {
        return null;
    }
}
