Week 1 - SOLID Principles/solid/src/main/java/org/example/OCP/bad/JSONEncoder.java
package org.example.OCP.bad;

public class JSONEncoder extends DataEncoder {
}
